# Formula-1-Arcade-Game

./: .gitignore  CMakeLists.txt  Engine.cpp  Engine.h  F1car.cpp  F1car.h  Fereastra.cpp  Fereastra.h  Game.cpp  Game.h  Pilot.cpp  Pilot.h  README.md  Team.cpp  Team.h  coverage.Headers_Engine.h.html  coverage.Headers_F1car.h.html  coverage.Headers_Pilot.h.html  coverage.Sources_Engine.cpp.html  coverage.Sources_F1car.cpp.html  coverage.Sources_Pilot.cpp.html  coverage.Sources_Team.cpp.html  coverage.Sources_main.cpp.html  coverage.Teams_Headers_AlfaRomeoRacing.h.html  coverage.Teams_Headers_AlphaTauri.h.html  coverage.Teams_Headers_Haas.h.html  coverage.Teams_Headers_McLaren.h.html  coverage.Teams_Headers_MercedesAMG.h.html  coverage.Teams_Headers_RacingPoint.h.html  coverage.Teams_Headers_RedBullRacing.h.html  coverage.Teams_Headers_Renault.h.html  coverage.Teams_Headers_ScuderiaFerrari.h.html  coverage.Teams_Headers_Williams.h.html  coverage.Teams_Sources_AlfaRomeoRacing.cpp.html  coverage.Teams_Sources_AlphaTauri.cpp.html  coverage.Teams_Sources_Haas.cpp.html  coverage.Teams_Sources_McLaren.cpp.html  coverage.Teams_Sources_MercedesAMG.cpp.html  coverage.Teams_Sources_RacingPoint.cpp.html  coverage.Teams_Sources_RedBullRacing.cpp.html  (+5 more)
.github/workflows/: c-cpp.yml  ccpp.yml  main.yml
GLFW/: glfw3.h  glfw3native.h
Grafica/: Sprite.cpp  Sprite.h  Textura.cpp  Textura.h
Headers/: Engine.h  F1car.h  Pilot.h  Team.h
IO/: MOUSE.cpp  MOUSE.h
Sources/: Engine.cpp  F1car.cpp  Pilot.cpp  Team.cpp  main.cpp
Teams/: AlfaRomeoRacing.cpp  AlfaRomeoRacing.h  AlphaTauri.cpp  AlphaTauri.h  Haas.cpp  Haas.h  McLaren.cpp  McLaren.h  MercedesAMG.cpp  MercedesAMG.h  RacingPoint.cpp  RacingPoint.h  RedBullRacing.cpp  RedBullRacing.h  Renault.cpp  Renault.h  ScuderiaFerrari.cpp  ScuderiaFerrari.h  Williams.cpp  Williams.h
Teams/Headers/: AlfaRomeoRacing.h  AlphaTauri.h  Haas.h  McLaren.h  MercedesAMG.h  RacingPoint.h  RedBullRacing.h  Renault.h  ScuderiaFerrari.h  Williams.h
Teams/Sources/: AlfaRomeoRacing.cpp  AlphaTauri.cpp  Haas.cpp  McLaren.cpp  MercedesAMG.cpp  RacingPoint.cpp  RedBullRacing.cpp  Renault.cpp  ScuderiaFerrari.cpp  Williams.cpp
